--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,3 +3,12 @@
 * {
   box-sizing: border-box;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
